--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </div>
   </section>
 
-  <section id="speakers" class="bg-primary">
+  <!-- <section id="speakers" class="bg-primary">
 
     <div class="container">
       <div class="row">
@@ -514,7 +514,7 @@
         </div>
 
       </div>
-  </section>
+  </section> -->
 
 
   <section id="schedule" class="schedule-box">
@@ -1149,7 +1149,7 @@
     </div>
   </section>
 
-  <section id="sponsors">
+  <!-- <section id="sponsors">
     <div class="container text-center">
       <h2 class="mb-5">Sponsors</h2>
       <div class="row mb-5" id="sponsors-box">
@@ -1162,7 +1162,7 @@
         <a href="mailto:sponsor@ethindia.co" class="text-center">sponsor@niet.co.in</a>
       </p>
     </div>
-  </section>
+  </section> -->
 
   <section id="faq" class="faqs-box">
 
