--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </div>
   </section>
 
-  <section id="speakers" class="bg-primary">
+  <!-- <section id="speakers" class="bg-primary">
 
     <div class="container">
       <div class="row">
@@ -514,7 +514,7 @@
         </div>
 
       </div>
-  </section>
+  </section> -->
 
 
   <section id="schedule" class="schedule-box">
