register button chngrd

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-eth js-scroll-trigger" href="#page-top">
-        <img src="img/hackX.svg"  height="80px" width="80px" alt="ETHIndia logo" /> &nbsp; HACK-X-NIET
+        <img src="img/hackX.svg"  height="80px" width="80px" alt="ETHIndia logo"  /> &nbsp; HACK-X-NIET
       </a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -114,14 +114,14 @@
         <div class="col-lg-12 mt-3" style="display:flex;justify-content: space-between; ">
           <p class="text-faded" style="line-height: 1.8;">Join us in breaking barriers and pushing boundaries at the first ever Hackathon event in NIET.
             <br>With the power of innovation and the spirit of community, we will pave the way for a brighter future
-            <br>On May 1-2, 2023 | Greater Noida 
+            <br>On May 8-9, 2023 | Greater Noida 
             <br>- let's hackX together!
           </p>
           <!-- <img src="https://media.discordapp.net/attachments/891025496601661504/1084865351268962445/hackX.png?width=606&height=606" style="max-height: 200px; margin: -90px -70px;"/> -->
         </div>
         <div class="col-lg-12" style="margin-top: 2.5rem !important">
           <p class="text-faded">Tech Talks + Events</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#">Register now!</a> <br>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://unstop.com/p/hack-x-niet-noida-institute-of-engineering-and-technology-niet-greater-noida-669873">Register now!</a> <br>
           <p style="padding: 30px 0px; font-size:1.5rem; font-weight: 400;">Important! problem statements to be out soon</p>
         </div>
       </div>
