head tag changes

--- a/index.html
+++ b/index.html
@@ -7,26 +7,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>HACK-X-NIET | 2023</title>
   <meta property="fb:app_id" content="361151391074555" />
-  <meta property="og:title" content="ETHIndia | August 10 - 12, 2018 @ Bangalore">
+  <meta property="og:title" content="">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://ethindia.co">
-  <meta property="og:image" content="https://ethindia.co/img/fb-og.png" />
+  <meta property="og:url" content="https://hackx-niet.tech">
+  <meta property="og:image" content="" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
-  <meta property="og:description" content="ETHIndia is Asia's biggest Ethereum hackathon and part of the ETHGlobal community. ETHIndia is much more than an event, it is an ideology, a movement with the goal of inspiring and fostering a community of buidlers.">
+  <meta property="og:description" content="NIET's biggest Technical hackathon and part of the Hack-X community. Hack-X is much more than an event, it is an ideology, a movement with the goal of inspiring and fostering a community of buidlers.">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:creator" content="@ethindiaco">
-  <meta name="twitter:site" content="@ethindiaco">
-  <meta name="twitter:title" content="ETHIndia">
-  <meta name="twitter:description" content="ETHIndia is Asia's biggest Ethereum hackathon and part of the ETHGlobal community. ETHIndia is much more than an event, it is an ideology, a movement with the goal of inspiring and fostering a community of buidlers.">
-  <meta name="twitter:domain" content="https://ethindia.co">
-  <meta name="twitter:image:src" content="https://ethindia.co/img/twitter-og.png">
-  <meta name="description" content="ETHIndia: Asia's biggest Ethereum hackathon. Part of the ETHGlobal community. #Ethereum #ETHIndia #BUIDL">
-  <meta name="keywords" content="ethindia, ethereum, ethereum hackathon, ethglobal, ethereum foundation, blockchain, web3, web3 world, hackathon bangalore, hackathon india, bangalore, india, asia, community, hackathon community, developer community, developer relations, api, sdk, technology, startups, innovation, hacks"
+  <meta name="twitter:creator" content="@hackx">
+  <meta name="twitter:site" content="@hackx">
+  <meta name="twitter:title" content="Hack-X NIET">
+  <meta name="twitter:description" content="HACK-X-NIET is biggest technical hackathon and part of the hack-x community. Hack-X is much more than an event, it is an ideology, a movement with the goal of inspiring and fostering a community of buidlers.">
+  <meta name="twitter:domain" content="https://hackx-niet.tech">
+  <meta name="twitter:image:src" content="https://hackx-neit.tech">
+  <meta name="description" content="HACK-X-NIET is biggest technical hackathon and part of the hack-x community. Hack-X is much more than an event, it is an ideology, a movement with the goal of inspiring and fostering a community of buidlers.">
+  <meta name="keywords" content="hackathon, hackx, technical hackathon, global, software edition, blockchain, web3, web3 world, hackathon niet, hackathon india,greater noida, india, asia, community, hackathon community, developer community, developer relations, api, sdk, technology, startups, innovation, hacks"
   />
-  <meta name="author" content="ETHIndia Team" />
+  <meta name="author" content="HACK-X Team" />
   <meta http-equiv="cache-control" content="public" />
-  <meta http-equiv="expires" content="Friday, 8 June 2018, 00:00:00 GMT" />
+  <meta http-equiv="expires" content="Monday, 8 May 2023, 08:30:00 GMT" />
   <link rel="apple-touch-icon-precomposed" sizes="57x57" href="favicons/apple-touch-icon-57x57.png" />
   <link rel="apple-touch-icon-precomposed" sizes="114x114" href="favicons/apple-touch-icon-114x114.png" />
   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="favicons/apple-touch-icon-72x72.png" />
