--- a/index.html
+++ b/index.html
@@ -1494,14 +1494,14 @@
               <a href="/code-of-conduct">Code of Conduct</a>
             </h6>
           </div> -->
-          <div class="col-lg-6 circle">
+          <!-- <div class="col-lg-6 circle">
             <div id='ripple'></div>
-          </div>
-          <div class="col-md-6 col-lg-4 text-center text-md-right footer-content">
+          </div> -->
+          <div class="col-md-6 col-lg-4 text-center text-md-right footer-content" style="margin-left: auto;margin-right: auto;">
 
-            <div >
+            <div  style="padding: 50px 0px;">
               <span class="social-icons icon-phone" > </span>
-              <div style="display: flex;">
+              <div style="display: flex;justify-content: center;" >
               <div ><i class="fa fa-phone" style="padding-right: 4px; color: aliceblue;" ></i></div>
               <span style="color: white;z-index: 10">  +91 8826637343, +91 8527196812</span>
             </div>
