--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   </div>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav" >
     <div class="container">
       <a class="navbar-eth js-scroll-trigger" href="#page-top">
         <img src="img/hackX.svg"  height="80px" width="80px" alt="ETHIndia logo"  /> &nbsp; HACK-X-NIET
@@ -102,13 +102,13 @@
     </div>
   </nav>
 
-  <header class="masthead text-white d-flex">
+  <header class="masthead text-white d-flex" style="margin: 100px 0px;">
     <div class="container my-auto home-container">
       <div class="row">
         <div class="col-lg-12">
           <h1 style="line-height: 1.2">
             <strong>NIET's biggest Technical
-              <br>#hackathon</strong>
+              #hackathon</strong>
           </h1>
         </div>
         <div class="col-lg-12 mt-3" style="display:flex;justify-content: space-between; ">
@@ -543,7 +543,7 @@
 
         </div>
 
-        <div class="tab-content text-center schedule-details">
+        <div class="tab-content text-center schedule-details" >
           <div role="tabpanel" class="tab-pane active show" id="workshop">
             <div class="col-lg-12">
               <!-- DAY 1 -->
