--- a/index.html
+++ b/index.html
@@ -1220,7 +1220,7 @@
               <div id="collapse3" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-Three">
                 <p class="panel-text display-7 panel-body">
                   We’re looking for people who "do"! Folks who are passionate enough to work on crazy world-changing ideas. Tell us what makes
-                  you apply to ETHIndia, what excites you, accomplishments you are proud of and whatever else you think can
+                  you apply to HACKX-NIET, what excites you, accomplishments you are proud of and whatever else you think can
                   strengthen your chances of acceptance. We’ll get to know more about your abilities from the past projects,
                   GitHub profile, participation/awards in other hackathons.</p>
               </div>
