--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
 
 
 <!-- problem statements -->
-<section id="problemstatements" class="faqs-box">
+<section id="problemstatements" class="ps-box">
 
   <div class="container">
     <div class="row">
@@ -592,10 +592,7 @@
               <a class="panel-title card-title text-black">
                 <h5 class="arrow display-5">
                   Building Resilient Communities <br>(PS ID:HX0001)
-                  <!-- <div style="display: flex;justify-content: space-between;">
-                  Building Resilient Communities  
-                 <p>(PS ID:HX0001)</p> 
-                </div>    -->
+      
                 </h5>
               </a>
             </button>
@@ -618,7 +615,7 @@
               <p class="panel-text display-7 panel-body">
                 Enabling Secure and Transparent International Transactions: Designing a blockchain-based platform that enables secure and transparent cross-border transactions, reducing transaction fees and processing times for customers and businesses.
                 <br />
-                <!-- <br />UPDATE: The hackathon applications are now closed.</p> -->
+              
             </div>
           </div>
 
@@ -1372,14 +1369,14 @@
           <h2 class="mb-4">FAQ</h2>
           <div id="toggle" class="toggle-panel">
             <div class="card">
-              <button class="card-header collapsed" data-toggle="collapse" role="button" href="#collapse1">
+              <button class="card-header collapsed" data-toggle="collapse" role="button" href="#collapse16">
                 <a class="panel-title card-title text-black">
                   <h5 class="arrow display-5">
                     Who can participate?
                   </h5>
                 </a>
               </button>
-              <div id="collapse1" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-One">
+              <div id="collapse16" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-One">
                 <p class="panel-text display-7 panel-body">
                   Everyone is welcome to apply, be it students, professionals or turing-test certified androids. If you are under 18 years
                   of age, we’ll need a parental consent form.</p>
@@ -1387,14 +1384,14 @@
             </div>
 
             <div class="card">
-              <button class="card-header collapsed" data-toggle="collapse" role="button" href="#collapse2">
+              <button class="card-header collapsed" data-toggle="collapse" role="button" href="#collapse17">
                 <a class="panel-title card-title text-black">
                   <h5 class="arrow display-5">
                     When will the applications close?
                   </h5>
                 </a>
               </button>
-              <div id="collapse2" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-Two">
+              <div id="collapse17" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-Two">
                 <p class="panel-text display-7 panel-body">
                   The application period will close on April 28th at 11:59 pm (IST). We evaluate applications on a rolling basis and acceptances
                   will be sent every weekend via email. Once accepted, you’ll have three days to confirm your attendance.
@@ -1404,14 +1401,14 @@
             </div>
 
             <div class="card">
-              <button class="card-header collapsed" data-toggle="collapse" role="button" href="#collapse3">
+              <button class="card-header collapsed" data-toggle="collapse" role="button" href="#collapse18">
                 <a class="panel-title card-title text-black">
                   <h5 class="arrow display-5">
                     How does the application process work?
                   </h5>
                 </a>
               </button>
-              <div id="collapse3" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-Three">
+              <div id="collapse18" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-Three">
                 <p class="panel-text display-7 panel-body">
                   We’re looking for people who "do"! Folks who are passionate enough to work on crazy world-changing ideas. Tell us what makes
                   you apply to HACKX-NIET, what excites you, accomplishments you are proud of and whatever else you think can
@@ -1421,14 +1418,14 @@
             </div>
 
             <div class="card">
-              <button class="card-header collapsed" data-toggle="collapse" role="button" href="#collapse4">
+              <button class="card-header collapsed" data-toggle="collapse" role="button" href="#collapse19">
                 <a class="panel-title card-title text-black">
                   <h5 class="arrow display-5">
                     How much does it cost?
                   </h5>
                 </a>
               </button>
-              <div id="collapse4" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-Four">
+              <div id="collapse19" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-Four">
                 <p class="panel-text display-7 panel-body">
                   Zero. Zip. Zilch. Nada. Nothing. Admission to Hack-X is completely free, thanks to our sponsors! We'll provide you with
                   a weekend's worth of swag, meals, drinks, snacks and a place to crash when you need a break from coding.</p>
@@ -1436,14 +1433,14 @@
             </div>
 
             <div class="card">
-              <button class="card-header collapsed" data-toggle="collapse" role="button" href="#collapse5">
+              <button class="card-header collapsed" data-toggle="collapse" role="button" href="#collapse20">
                 <a class="panel-title card-title text-black">
                   <h5 class="arrow display-5">
                     Can we apply as a team?
                   </h5>
                 </a>
               </button>
-              <div id="collapse5" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-Five">
+              <div id="collapse20" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-Five">
                 <p class="panel-text display-7 panel-body">
                   Yes! This hackathon is strictly a team competition. We believe that you’re stronger as a team than you are apart. You can
                   join or create a team once you've started an individual application.
