--- a/index.html
+++ b/index.html
@@ -153,8 +153,7 @@
       <div class="row">
         
         <div class="col-lg-8 mx-auto text-center">
-          <a href="https://logwork.com/countdown-yc5e" class="countdown-timer" data-timezone="Asia/Kolkata" data-textcolor="#ffffff" data-date="2023-05-08 09:30" data-background="#1e1a6b" data-digitscolor="#fafafa">Hackathon will be starting in</a>
-          <h2 class="section-heading text-white">Get ready to innovate, collaborate, and create</h2>
+          <a href="https://logwork.com/countdown-yc59" class="countdown-timer" data-timezone="Asia/Kolkata" data-textcolor="#fafafa" data-date="2023-05-02 23:19" data-background="#2d0b91" data-digitscolor="#faf5f5" data-unitscolor="#fffafa">Hackathon will begin in </a>          <h2 class="section-heading text-white">Get ready to innovate, collaborate, and create</h2>
           <p class="text-faded mt-3">Welcome to hackX, where innovation meets collaboration.
              We are a community of thinkers, builders, and problem solvers, dedicated to driving positive change through technology.
              From coding to design to entrepreneurship, hackX is the place to be for anyone who's passionate about innovation.
