--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <div class="col-xl-2 col-md-3 col-sm-4 col-6">
           <a href="https://twitter.com/NadavAHollander" target="_blank">
             <div class="speaker-card">
-              <img class="speaker-card-img-top" src="img/nadav.jpg" alt="Nadav Hollandar">
+              <img class="speaker-card-img-top" src="https://media.discordapp.net/attachments/891025496601661504/1103026266094964867/WhatsApp_Image_2023-05-02_at_11.54.27_PM.jpeg?width=606&height=606" alt="Nadav Hollandar"/>
               <div class="speaker-card-body">
                 <div class="speaker-card-header">
                   <h5>Nadav Hollander</h5>
@@ -199,7 +199,7 @@
         <div class="col-xl-2 col-md-3 col-sm-4 col-6">
           <a href="https://twitter.com/virgilgr" target="_blank">
             <div class="speaker-card">
-              <img class="speaker-card-img-top" src="img/virgil.jpg" alt="Dr. Virgil Griffith">
+              <img class="speaker-card-img-top" src="https://media.discordapp.net/attachments/891025496601661504/1103026640432398346/WhatsApp_Image_2023-05-02_at_11.18.14_PM.jpeg?width=628&height=605" alt="Dr. Virgil Griffith">
               <div class="speaker-card-body">
                 <div class="speaker-card-header">
                   <h5>Dr. Virgil Griffith</h5>
@@ -214,7 +214,7 @@
         <div class="col-xl-2 col-md-3 col-sm-4 col-6">
           <a href="https://twitter.com/TheRealKartik" target="_blank">
             <div class="speaker-card">
-              <img class="speaker-card-img-top" src="img/kartik.jpg" alt="Kartik Talwar">
+              <img class="speaker-card-img-top" src="https://media.discordapp.net/attachments/891025496601661504/1103027224254349492/WhatsApp_Image_2023-05-03_at_12.04.51_AM.jpeg?width=455&height=606" alt="Kartik Talwar">
               <div class="speaker-card-body">
                 <div class="speaker-card-header">
                   <h5>Kartik Talwar</h5>
@@ -1371,6 +1371,50 @@
       </p>
     </div>
   </section> -->
+  <div class="banner-bottom-color-div">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="banner-bottom-top">
+                <!-- <p>Impact</p> -->
+                <!-- <h3>Where There's A Will There Are A Million Ways</h3> -->
+                <h3>Hackx-Niet's Journey till now</h3>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-3">
+            <div class="count-div">
+                <h4>10000+ </h4>
+                <p>Registrations</p>
+            </div>
+        </div>
+        <div class="col-md-2">
+            <div class="count-div2">
+                <h4>50+</h4>
+                <p>Institutes</p>
+            </div>
+        </div>
+        <!-- <div class="col-md-2">
+            <div class="count-div3">
+                <h4>365</h4>
+                <p>Organizations</p>
+            </div>
+        </div> -->
+        <div class="col-md-3">
+            <div class="count-div3">
+                <h4>5</h4>
+                <p>Problem Statements</p>
+            </div>
+        </div>
+        <div class="col-md-2">
+            <div class="count-div4">
+                <h4>29,000+</h4>
+                <p>Impressions on unstop</p>
+            </div>
+        </div>
+    </div>
+</div>
+
 
   <section id="faq" class="faqs-box">
 
