remove page count

--- a/index.html
+++ b/index.html
@@ -1675,7 +1675,7 @@
         </div>
       </div>
     </div>
-    <div style="display: flex;margin-left: auto;margin-right: auto;flex-direction: column;text-align: center;">
+    <!-- <div style="display: flex;margin-left: auto;margin-right: auto;flex-direction: column;text-align: center;">
   
       <p style="max-height: 30px;">This page was viewed</p>
       <h1 id="count" style="color: rgb(95, 188, 95);"></h1>
@@ -1694,7 +1694,7 @@
         
       </script> 
       
-      </div>
+      </div> -->
   </section>
   
 
