--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
   <link rel="apple-touch-icon-precomposed" sizes="120x120" href="favicons/apple-touch-icon-120x120.png" />
   <link rel="apple-touch-icon-precomposed" sizes="76x76" href="favicons/apple-touch-icon-76x76.png" />
   <link rel="apple-touch-icon-precomposed" sizes="152x152" href="favicons/apple-touch-icon-152x152.png" />
-  <link rel="icon" type="image/png" href="favicons/favicon-196x196.png" sizes="196x196" />
-  <link rel="icon" type="image/png" href="favicons/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/png" href="favicons/favicon-32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="favicons/favicon-16x16.png" sizes="16x16" />
-  <link rel="icon" type="image/png" href="favicons/favicon-128.png" sizes="128x128" />
+  <link rel="icon" type="svg" href="favicons/img/hackX.svg" sizes="196x196" />
+  <link rel="icon" type="svg" href="favicons/img/hackX.svg" sizes="96x96" />
+  <link rel="icon" type="svg" href="favicons/img/hackX.svg" sizes="32x32" />
+  <link rel="icon" type="svg" href="favicons/img/hackX.svg" sizes="16x16" />
+  <link rel="icon" type="svg" href="favicons/img/hackX.svg" sizes="128x128" />
   <meta name="application-name" content="ETHIndia: Asia's biggest Ethereum hackathon." />
   <meta name="theme-color" content="#203260">
   <meta name="msapplication-TileColor" content="#203260" />
@@ -168,50 +168,50 @@
     </div>
   </section>
 
-  <section id="speakers" class="bg-primary" style="display: none;">
+  <section id="speakers" class="bg-primary" >
 
-    <div class="container">
-      <div class="row">
+    <div class="container" >
+      <div class="row" >
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading">Speakers and Judges</h2>
+          <h2 class="section-heading">Judges</h2>
         </div>
       </div>
     </div>
 
-    <div class="container mt-5">
-      <div class="row no-gutters">
+    <div class="container mt-5" >
+      <div class="row no-gutters" style="display: flex; align-items:center;justify-content: center;">
 
-        <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+        <div class="col-xl-2 col-md-3 col-sm-4 col-6" style="margin: 0px 150px;">
           <a href="https://twitter.com/NadavAHollander" target="_blank">
-            <div class="speaker-card">
-              <img class="speaker-card-img-top" src="https://media.discordapp.net/attachments/891025496601661504/1103026266094964867/WhatsApp_Image_2023-05-02_at_11.54.27_PM.jpeg?width=606&height=606" alt="Nadav Hollandar"/>
+            <div class="speaker-card" >
+              <img class="speaker-card-img-top" src="https://media.discordapp.net/attachments/891025496601661504/1103565070048448572/Profile_1.jpg?width=377&height=465" alt="Nadav Hollandar"/>
               <div class="speaker-card-body">
                 <div class="speaker-card-header">
-                  <h5>Nadav Hollander</h5>
-                  <p class="text-faded">Founder &amp; CEO
-                    <br />Dharma Labs</p>
+                  <h5>Surender Pal Jain</h5>
+                  <p class="text-faded">Sr. Director
+                    <br />Capgemini</p>
                 </div>
               </div>
             </div>
           </a>
         </div>
 
-        <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+        <div class="col-xl-2 col-md-3 col-sm-4 col-6" style="margin: 0px 150px;">
           <a href="https://twitter.com/virgilgr" target="_blank">
             <div class="speaker-card">
-              <img class="speaker-card-img-top" src="https://media.discordapp.net/attachments/891025496601661504/1103026640432398346/WhatsApp_Image_2023-05-02_at_11.18.14_PM.jpeg?width=628&height=605" alt="Dr. Virgil Griffith">
+              <img class="speaker-card-img-top" src="https://media.discordapp.net/attachments/891025496601661504/1103565366963220490/Suvidha.jpg?width=402&height=558">
               <div class="speaker-card-body">
                 <div class="speaker-card-header">
-                  <h5>Dr. Virgil Griffith</h5>
-                  <p class="text-faded">Special Projects
-                    <br />Ethereum Foundation</p>
+                  <h5>Suvidha Gupts</h5>
+                  <p class="text-faded">Director
+                    <br />Capgemini</p>
                 </div>
               </div>
             </div>
           </a>
         </div>
 
-        <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+        <!-- <div class="col-xl-2 col-md-3 col-sm-4 col-6">
           <a href="https://twitter.com/TheRealKartik" target="_blank">
             <div class="speaker-card">
               <img class="speaker-card-img-top" src="https://media.discordapp.net/attachments/891025496601661504/1103027224254349492/WhatsApp_Image_2023-05-03_at_12.04.51_AM.jpeg?width=455&height=606" alt="Kartik Talwar">
@@ -535,7 +535,7 @@
               </div>
             </div>
           </a>
-        </div>
+        </div> -->
 
       </div>
   </section>
