--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
                         <p class="schedule-time morning"></p>
                       </td>
                       <td>
-                        <strong>8:30 AM - 9:15AM</strong>
+                        <strong>8:30 AM - 9:30AM</strong>
                       </td>
                       <td>
                         Check-In
@@ -771,10 +771,10 @@
                         <p class="schedule-time morning"></p>
                       </td>
                       <td>
-                        <strong>9:30 AM - 10:30 AM</strong>
+                        <strong>9:30 AM - 10:00 AM</strong>
                       </td>
                       <td>
-                        Opening Ceremony & Welcome Remarks
+                        Tea Break
                         <!-- <div class="subtitle">ETHGlobal &amp; ETHIndia Team + Our Sponsors</div>
                         <p style="font-size: 0.9rem;margin:0;line-height: 24px;color:inherit">NuCypher, Maker, Status, Dharma, Lendroid, ECF, ConsenSys, Gitcoin, Matic, Quantstamp, Web3 & Bounties
                           Network </p> -->
@@ -787,11 +787,11 @@
                         <p class="schedule-time morning"></p>
                       </td>
                       <td>
-                        <strong>10:30 AM - 11:00 AM</strong>
+                        <strong>10:00 AM - 11:00 AM</strong>
                       </td>
                       <td>
-                        <div class="tag">talk</div>
-                        Keynote speech and inspirational talk
+                        <div class="tag">ceremony</div>
+                        Opening Ceremony & Welcome Remarks
 
 
                       </td>
@@ -802,11 +802,11 @@
                         <p class="schedule-time morning"></p>
                       </td>
                       <td>
-                        <strong>11:00 AM - 12:00 PM</strong>
+                        <strong>11:00 AM - 11:30 AM</strong>
                       </td>
                       <td>
                         <!-- <div class="tag">talk</div> -->
-                        Networking
+                        Keynote speech and inspirational talk
                         <!-- <div class="subtitle">by Nadav Hollander</div> -->
                       </td>
                     </tr>
@@ -818,11 +818,11 @@
                         <p class="schedule-time noon"></p>
                       </td>
                       <td>
-                        <strong>12:00 PM - 1:00 PM</strong>
+                        <strong>11:30 AM - 12:30 PM</strong>
                       </td>
                       <td>
                         <!-- <div class="tag">talk</div> -->
-                        Lunch break
+                        Networking and Team Settlement
                         <!-- <br />Live Free Dai Hard: Overview of the Dai Stablecoin System -->
                         <!-- <div class="subtitle">by Sean Brennan</div> -->
                       </td>
@@ -833,13 +833,15 @@
                         <p class="schedule-time noon"></p>
                       </td>
                       <td>
-                        <strong>1:00 PM - 2:00 PM	
+                        <strong>12:30 PM - 1:30 PM
 
                         </strong>
                       </td>
                       <td>
                         <!-- <div class="tag">talk</div> -->
-                        Hacking begins! Teams start working on their projects
+                       Lunch break
+
+
                         <!-- <br /> Proxy re-encryption for sharing private data in decentralized applications
                         <div class="subtitle">by Dr. Michael Egorov</div> -->
                       </td>
@@ -850,14 +852,13 @@
                         <p class="schedule-time noon"></p>
                       </td>
                       <td>
-                        <strong>2:00 PM - 3:00 PM</strong>
+                        <strong>1:30 PM - 2:30 PM</strong>
                       </td>
                       <td>
                         <!-- <div class="tag">workshop</div>
                         <br /> Decentralising Twitter with Embark
                         <div class="subtitle">by Andy Tudhope</div> -->
-                        First Mentoring sessions with industry experts and mentors
-                      </td>
+                        Hacking begins! Teams start working on their projects                      </td>
                     </tr>
 
                     <tr>
@@ -865,10 +866,10 @@
                         <p class="schedule-time noon"></p>
                       </td>
                       <td>
-                        <strong>3:00 - 5:00 PM</strong>
+                        <strong>2:30 PM - 3:30 PM</strong>
                       </td>
                       <td>
-                       Hacking continues, teams work on their projects
+                        First Mentoring sessions with industry experts and mentors
 
 
                       </td>
@@ -879,12 +880,12 @@
                         <p class="schedule-time evening"></p>
                       </td>
                       <td>
-                        <strong>5:00 PM - 7:00 PM	
+                        <strong>3:30 PM - 5:30 PM
 
                         </strong>
                       </td>
                       <td>
-                        First Evaluation Round
+                        Hacking continues, teams work on their projects
                         <!-- <div class="tag">talk</div>
                         <br /> The Journey to Web3
                         <div class="subtitle">by Jack Platts</div> -->
@@ -896,10 +897,10 @@
                         <p class="schedule-time night"></p>
                       </td>
                       <td>
-                        <strong>7:00 - 8:00 PM</strong>
+                        <strong>5:30 PM - 7:30 PM</strong>
                       </td>
                       <td>
-                        Dinner break
+                        First Evaluation Round
                         <!-- <div class="tag">workshop</div>
                         <br /> Introducing Maker.js
                         <div class="subtitle">by Sean Brennan</div> -->
@@ -911,10 +912,10 @@
                         <p class="schedule-time night"></p>
                       </td>
                       <td>
-                        <strong>8:00 PM - 11:00 PM</strong>
+                        <strong>7:30 PM - 8:30 PM</strong>
                       </td>
                       <td>
-                        Cultural Event Ceremony
+                        Dinner break
                         <!-- <div class="tag">talk</div>
                         <br /> Virtual State Channels
                         <div class="subtitle">by Arjun Bhuptani</div> -->
@@ -926,10 +927,28 @@
                         <p class="schedule-time night"></p>
                       </td>
                       <td>
-                        <strong>11:00 PM – 12:00 AM</strong>
+                        <strong>8:30 PM - 10:30 PM</strong>
                       </td>
                       <td>
-                        Hacking continues
+                       Cultural Event Ceremony
+
+
+                        <!-- <div class="tag">workshop</div>
+                        <br /> Building end-to-end encrypted decentralized applications using NuCypher network
+                        <div class="subtitle">by Dr. Michael Egorov</div> -->
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <p class="schedule-time night"></p>
+                      </td>
+                      <td>
+                        <strong>10:30 PM - 12:00 AM</strong>
+                      </td>
+                      <td>
+                       Hacking Continues
+
+
                         <!-- <div class="tag">workshop</div>
                         <br /> Building end-to-end encrypted decentralized applications using NuCypher network
                         <div class="subtitle">by Dr. Michael Egorov</div> -->
@@ -1051,7 +1070,7 @@
                         <p class="schedule-time night"></p>
                       </td>
                       <td>
-                        <strong>1:00 AM - 3:00 AM	
+                        <strong>1:00 AM - 6:00 AM	
 
                         </strong>
                       </td>
@@ -1063,11 +1082,11 @@
                         <p class="schedule-time night"></p>
                       </td>
                       <td>
-                        <strong>3:00 AM - 4:00 AM	
+                        <strong>6:00 AM - 7:00 AM	
 
                         </strong>
                       </td>
-                      <td>Power nap and relaxation</td>
+                      <td>Yoga Session</td>
                     </tr>
 
                     <!-- <tr>
@@ -1079,7 +1098,7 @@
                       <td>Hacking Continues</td>
                     </tr> -->
 
-                    <tr>
+                    <!-- <tr>
                       <td>
                         <p class="schedule-time morning"></p>
                       </td>
@@ -1101,7 +1120,7 @@
                       <td>
                         Yoga Session
                       </td>
-                    </tr>
+                    </tr> -->
 
 
                     <tr>
@@ -1124,7 +1143,7 @@
                       </td>
                       <td>
                         <strong>
-                          8:00 AM - 9:00 AM	
+                          8:00 AM - 10:00 AM	
 
 
                         </strong>
@@ -1138,7 +1157,7 @@
                       </td>
                       <td>
                         <strong>
-                          9:00 AM - 10:00 AM	
+                          10:00 AM - 11:00 AM	
 
 
                         </strong>
@@ -1160,7 +1179,7 @@
                       </td>
                       <td>
                         <strong>
-                          10:00 AM - 12:00PM	
+                          11:00 AM - 12:30PM	
 
 
                         </strong>
@@ -1173,7 +1192,7 @@
                       </td>
                       <td>
                         <strong>
-                          12:00 PM - 1:00 PM	
+                          12:30 PM - 1:30 PM	
 
 
 
@@ -1191,7 +1210,7 @@
                       </td>
                       <td>
                         <strong>
-                          1:00 PM - 2:00 PM	
+                          1:30 PM - 3:00 PM	
 
 
 
@@ -1206,7 +1225,7 @@
                       </td>
                       <td>
                         <strong>
-                          2:00 PM - 4:00 PM	
+                          3:00 PM - 4:30 PM	
 
 
 
@@ -1221,7 +1240,7 @@
                       </td>
                       <td>
                         <strong>
-                          4:00 PM - 5:00 PM	
+                          4:30 PM - 6:00 PM	
 
 
 
@@ -1238,7 +1257,7 @@
                       </td>
                       <td>
                         <strong>
-                          5:00 PM - 6:00 PM
+                          6:00 PM - 7:00 PM
 
 
 
