--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
               <img class="speaker-card-img-top" src="https://media.discordapp.net/attachments/891025496601661504/1103565366963220490/Suvidha.jpg?width=402&height=558">
               <div class="speaker-card-body">
                 <div class="speaker-card-header">
-                  <h5>Suvidha Gupts</h5>
+                  <h5>Suvidha Gupta</h5>
                   <p class="text-faded">Director
                     <br />Capgemini</p>
                 </div>
