--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
               <div class="col-xl-2 col-md-3 col-sm-4 col-6" >
                 <!-- <a href="https://twitter.com/NadavAHollander" target="_blank"> -->
                   <div class="speaker-card" >
-                    <img class="speaker-card-img-top" src="https://mail.google.com/mail/u/0?ui=2&ik=380cd5e8f7&attid=0.1&permmsgid=msg-a:r-7446593832702461663&th=187eaac6f3535126&view=fimg&fur=ip&sz=s0-l75-ft&attbid=ANGjdJ-B_6UBSnV5H6d6E-joSB8mQMqTc2NgYiyMfa193Npfke8AKwy4wtX5siVQTHvyZSvLqV1Cp0khhwEbYlAwAyEx9I8TZzysZJohvE3OT2W-WsOnr0e6DgtRaws&disp=emb&realattid=187eaab968291bc77ec1" alt="Nadav Hollandar"/>
+                    <img class="speaker-card-img-top" src="https://media.discordapp.net/attachments/891025496601661504/1103958159866986496/IMG_1347.jpeg?width=537&height=606" alt="DR. op Aggarwal"/>
                     <div class="speaker-card-body">
                       <div class="speaker-card-header">
                         <h5>Dr. OP Aggarwal</h5>
@@ -685,7 +685,7 @@
               <div class="col-xl-2 col-md-3 col-sm-4 col-6">
                 <!-- <a href="https://twitter.com/virgilgr" target="_blank"> -->
                   <div class="speaker-card">
-                    <img class="speaker-card-img-top" src="https://mail.google.com/mail/u/0?ui=2&ik=380cd5e8f7&attid=0.3&permmsgid=msg-a:r-7446593832702461663&th=187eaac6f3535126&view=fimg&fur=ip&sz=s0-l75-ft&attbid=ANGjdJ9pi7Po9EQxGs09WJwLBYohB_Pszx0ke654SZGAXDkCew1BanhcjGo4DghDZ6kXpnciWlzvL_uvwooF0Eu1yWEb6Ro4q01F0yz2R9dyLH4DcTFMYdwEApVtGvY&disp=emb&realattid=187eaac0307dc669ced3">
+                    <img class="speaker-card-img-top" src="https://media.discordapp.net/attachments/891025496601661504/1103958901059231764/IMG_1348.jpeg?width=526&height=548">
                     <div class="speaker-card-body">
                       <div class="speaker-card-header">
                         <h5>Dr. Neema Agarwal</h5>
@@ -699,7 +699,7 @@
               <div class="col-xl-2 col-md-3 col-sm-4 col-6" >
                 <!-- <a href="https://twitter.com/NadavAHollander" target="_blank"> -->
                   <div class="speaker-card" >
-                    <img class="speaker-card-img-top" src="https://mail.google.com/mail/u/0?ui=2&ik=380cd5e8f7&attid=0.2&permmsgid=msg-a:r-7446593832702461663&th=187eaac6f3535126&view=fimg&fur=ip&sz=s0-l75-ft&attbid=ANGjdJ_r6QB6WnLuMwMGYy9ERQ-x4inHBDLduATCE_QW5B1nY-RWQ9j9m2HDxsLCGZbgGgVOICffTKqxOq_9BvqTjIogcb9udGiayqN3iyz4QnuKvsPUKe9aLZtheDY&disp=emb&realattid=187eaabf19d2710c1ee2" alt="Nadav Hollandar"/>
+                    <img class="speaker-card-img-top" src="https://media.discordapp.net/attachments/891025496601661504/1103959310096146472/IMG_1349.jpeg?width=481&height=606" alt="Raman batra"/>
                     <div class="speaker-card-body">
                       <div class="speaker-card-header">
                         <h5>Mr. Raman Batra</h5>
@@ -713,7 +713,7 @@
               <div class="col-xl-2 col-md-3 col-sm-4 col-6">
                 <!-- <a href="https://twitter.com/virgilgr" target="_blank"> -->
                   <div class="speaker-card">
-                    <img class="speaker-card-img-top" src="https://mail.google.com/mail/u/0?ui=2&ik=380cd5e8f7&attid=0.4&permmsgid=msg-a:r-7446593832702461663&th=187eaac6f3535126&view=fimg&fur=ip&sz=s0-l75-ft&attbid=ANGjdJ_g_a1JkTqAUFjG1LgPFVAI3MrD2u5uLAmYgJExA1UkwsJuGBdCfJKSpn41UKKroU9wP8CRGaADd2TvXi3k92NBDvoHuHYWvfqN0PgjrzXYq-CfJ4al4hoY-q0&disp=emb&realattid=187eaac39607be49ae64">
+                    <img class="speaker-card-img-top" src="https://media.discordapp.net/attachments/891025496601661504/1103960377491996792/WhatsApp_Image_2023-05-05_at_1.54.03_PM.jpeg?width=250&height=375">
                     <div class="speaker-card-body">
                       <div class="speaker-card-header">
                         <h5>Dr. Vinod M. Kapse</h5>
