--- a/index.html
+++ b/index.html
@@ -1104,7 +1104,7 @@
                         <p class="schedule-time noon"></p>
                       </td>
                       <td>
-                        <strong>11:30 AM - 12:30 PM</strong>
+                        <strong>11:30 AM - 12:15 PM</strong>
                       </td>
                       <td>
                         <!-- <div class="tag">talk</div> -->
@@ -1119,7 +1119,7 @@
                         <p class="schedule-time noon"></p>
                       </td>
                       <td>
-                        <strong>12:30 PM - 1:30 PM
+                        <strong>12:15 PM - 1:15 PM
 
                         </strong>
                       </td>
@@ -1138,7 +1138,7 @@
                         <p class="schedule-time noon"></p>
                       </td>
                       <td>
-                        <strong>1:30 PM - 2:30 PM</strong>
+                        <strong>1:15 PM - 2:30 PM</strong>
                       </td>
                       <td>
                         <!-- <div class="tag">workshop</div>
@@ -1213,7 +1213,7 @@
                         <p class="schedule-time night"></p>
                       </td>
                       <td>
-                        <strong>8:30 PM - 10:30 PM</strong>
+                        <strong>8:30 PM - 9:30 PM</strong>
                       </td>
                       <td>
                        Cultural Event Ceremony
@@ -1229,7 +1229,7 @@
                         <p class="schedule-time night"></p>
                       </td>
                       <td>
-                        <strong>10:30 PM - 12:00 AM</strong>
+                        <strong>9:30 PM - 12:00 AM</strong>
                       </td>
                       <td>
                        Hacking Continues
@@ -1511,32 +1511,16 @@
                       </td>
                       <td>
                         <strong>
-                          3:00 PM - 4:30 PM	
+                          3:00 PM - 5:00 PM	
 
 
 
 
                         </strong>
                       </td>
-                      <td>Submission deadline, teams submit their projects</td>
+                      <td>Final evaluation round</td>
                     </tr>
-                    <tr>
-                      <td>
-                        <p class="schedule-time evening"></p>
-                      </td>
-                      <td>
-                        <strong>
-                          4:30 PM - 6:00 PM	
-
-
-
-
-
-
-                        </strong>
-                      </td>
-                      <td>FINAL EVALUATION Judging panel reviews projects & Selects winner</td>
-                    </tr>
+                    
                     <tr>
                       <td>
                         <p class="schedule-time evening"></p>
